# remindee

./: .env.example  context.md  main.py  pyproject.toml  requirements.txt
remindee/: main.py
remindee/models/: __init__.py  note.py  note_folder.py  reminder.py  task.py  user.py
remindee/resources/: styles.qss
remindee/services/: auth_service.py  keyboard_listener_process.py  keyboard_service.py  note_service.py  notification_service.py  scheduler_service.py  task_service.py
remindee/ui/: login_dialog.py  main_window.py  note_card.py  note_dialog.py  note_editor.py  note_list_widget.py  quick_note_dialog.py  reminder_card.py  reminder_dialog.py  settings_dialog.py  styles.py  task_card.py  task_dialog.py
remindee/utils/: config.py  database.py  vibrancy.py
tests/: conftest.py  test_auth.py  test_database.py  test_scheduler.py  test_ui.py
