[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "remindee"
version = "0.1.0"
description = "Simple & elegant desktop reminder app"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "SQLAlchemy>=2.0.0",
    "bcrypt>=4.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth>=2.0.0",
    "APScheduler>=3.10.0",
    "plyer>=2.1.0",
    "python-dotenv>=1.0.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
remindee = "remindee.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["remindee*"]
